Fix background color of modal on mobile

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -30,6 +30,8 @@ body {
 
 .modal-content {
   height: 99%;
-  background-color: white;
 }
 
+#showAreaModal {
+  background-color: white;
+}
